src/Bicep.Core.Samples/Files/baselines/InvalidExtensions_CRLF/child/hasConfigurableExtensionsWithoutAlias.bicep
extension kubernetes with {
  namespace: 'nsFromInsideModule'
}
